# tiscamera

tcam-stereo-capture/: CMakeLists.txt  README.md  imu_xsens_stereocapture.cpp  stereo_software_trigger.cpp  stereocapture_onKeyPress.cpp
